fix: alignment of login

--- a/public/frontEnd/styles/login.css
+++ b/public/frontEnd/styles/login.css
@@ -181,6 +181,6 @@ body {
         height: 15rem;
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1.5rem;
         width: 21rem;
     }
