--- a/public/frontEnd/styles/loginRs.css
+++ b/public/frontEnd/styles/loginRs.css
@@ -47,7 +47,7 @@
         justify-content: center;
         align-items: center;
         color: #1D2A42;
-        padding: 4rem 10rem 10rem 10rem;
+        padding: 10% 10% 10% 40%;
         flex-direction: column;
     }
 
@@ -90,13 +90,7 @@
         display: block;
         width: 100vw;
     } 
-    .boxForm{
-        height: 15rem;
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        width: 21rem;
-    }
+    
 
     .forgotHeader{
         align-self: end;
